[package]
name = "lootcoin-core"
version = "3.1.0"
edition = "2021"
description = "Core implementation of the lootcoin blockchain"
repository = "https://github.com/mcrepeau/lootcoin-core"
authors = ["Matthieu Crepeau"]
readme = "README.md"
license = "Apache-2.0"

[lib]
name = "lootcoin_core"
path = "src/lib.rs"

[dependencies]
serde       = { version = "1.0", features = ["derive"] }
bincode     = "1.3"
hex         = "0.4"
bech32      = "0.9"
cubehash    = "0.4"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand        = "0.8"
